responsive fab & card

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,10 @@
 * {
   font-family: 'Kumbh Sans', sans-serif;
 }
-.container {
+.cont-1 {
   display: flex;
-  justify-content: center;
-  height: 100vh;
-  max-width: 500px;
+  max-height: 100px;
+  max-width: 100%;
 }
 
 .cont {
@@ -24,7 +23,6 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  flex: 1;
   color: black;
   background-color: white;
   border-radius: 20px 20px 0 0;
@@ -40,7 +38,7 @@
   color: 'inherit';
 }
 .card-list {
-  padding: 6px;
+  padding: 20px;
 }
 .card-list:hover {
   cursor: pointer;
@@ -49,15 +47,14 @@
 }
 .modal-body {
   overflow: auto;
-  height: 70vh;
+  height: 40vh;
 }
 .fab {
-  text-align: left;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
 }
-.fab-btn {
-  top: 90vh;
-  right: 60px;
-}
+
 .box {
   flex-grow: 1;
   overflow: auto;
